# postgres

./: .cirrus.tasks.yml  .gitignore  configure  configure.ac  meson.build
doc/src/sgml/: config.sgml  installation.sgml  monitoring.sgml
src/backend/catalog/: system_views.sql
src/backend/executor/: execMain.c
src/backend/postmaster/: auxprocess.c
src/backend/storage/ipc/: ipci.c
src/backend/storage/lmgr/: proc.c
src/backend/tcop/: postgres.c
src/backend/utils/: .gitignore  Makefile
src/backend/utils/activity/: Makefile  backend_status.c  generate-wait_event_types.pl  meson.build  wait_event.c  wait_event_names.txt  wait_event_timing.c
src/backend/utils/init/: postinit.c
src/backend/utils/misc/: guc_tables.c  postgresql.conf.sample
src/include/: pg_config.h.in
src/include/catalog/: catversion.h
src/include/storage/: lwlocklist.h
src/include/utils/: .gitignore  guc.h  guc_hooks.h  meson.build  wait_event.h  wait_event_timing.h  wait_event_timing_data.c
src/test/modules/: meson.build
src/test/modules/test_wait_event_stress/: Makefile  meson.build  test_wait_event_stress--1.0.sql  test_wait_event_stress.c  test_wait_event_stress.control
src/test/modules/test_wait_event_stress/expected/: test_wait_event_stress.out
src/test/modules/test_wait_event_stress/sql/: test_wait_event_stress.sql
src/test/modules/test_wait_event_stress/t/: 001_orphan_roundtrip.pl  002_ring_wrap.pl
src/test/regress/: parallel_schedule
src/test/regress/expected/: rules.out  wait_event_timing.out  (+1 more)
src/tools/pgindent/: exclude_file_patterns  typedefs.list
(+1 files in other folders)
